TDD - create book entity

--- a/LibrarySystem.Domain.Tests/LibrarySystem.Domain.Tests.csproj
+++ b/LibrarySystem.Domain.Tests/LibrarySystem.Domain.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibrarySystem.Domain\LibrarySystem.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
